--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,8 @@
     },
     "name": "RetroTxt",
     "description": "RetroTxt stylises ASCII and MS-DOS text-art files with authentic fonts and colours from the 8 and 16-bit home computing eras.",
-    "version": "1.2",
-    "version_name": "1.2",
+    "version": "1.26",
+    "version_name": "1.26",
     "minimum_chrome_version": "41",
     "default_locale": "en_US",
     "author": "Ben Garrett",
@@ -56,6 +56,7 @@
     "permissions": [
         "activeTab",
         "contextMenus",
+        "management",
         "storage",
         "tabs", "http://*/", "https://*/", "file:///*"
     ],
