--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,15 @@
 {
-    "manifest_version": 2,
+    "version": "2.2.10",
+    "version_name": "2.2",
+    "minimum_chrome_version": "51",
     "applications": {
         "gecko": {
             "id": "retrotxt@defacto2.net",
-            "strict_min_version": "50.0"
+            "strict_min_version": "51.0"
         }
     },
     "name": "RetroTxt",
-    "description": "Turn many pieces of ANSI text art and ASCII/NFO plain text into HTML5 text.",
-    "version": "2.1.7",
-    "version_name": "2.1",
-    "minimum_chrome_version": "49",
+    "description": "Turn pieces of ANSI based text art and ASCII, NFO plain text into HTML.",
     "default_locale": "en_US",
     "author": "Ben Garrett",
     "homepage_url": "https://github.com/bengarrett/RetroTxt",
@@ -44,11 +43,9 @@
     "commands": {
         "_execute_browser_action": {
             "suggested_key": {
-                "windows": "Alt+T",
-                "mac": "Alt+T",
-                "chromeos": "Alt+T",
-                "linux": "Alt+T"
-            }
+                "default": "Alt+R"
+            },
+            "description": "Switch the active tab between plain text and HTML displays"
         }
     },
     "permissions": [
@@ -76,5 +73,6 @@
         "fonts/commodore64/fonts/*.ttf",
         "fonts/ms_dos/*.ttf",
         "test/tests.js"
-    ]
+    ],
+    "manifest_version": 2
 }
