--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,4 +11,5 @@ twitter_username: your-twitter-handle # DO NOT include the @ character, or else 
 github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
-theme: jekyll-theme-cayman
+#theme: jekyll-theme-cayman
+remote_theme: mmistakes/minimal-mistakes
