--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -12,4 +12,4 @@ github_username:  your-github-handle # DO NOT include the @ character, or else t
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 #theme: jekyll-theme-cayman
-remote_theme: mmistakes/minimal-mistakes
+remote_theme: poole/hyde
