--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,3 +13,5 @@ github_username:  your-github-handle # DO NOT include the @ character, or else t
 show_excerpts: true # set to false to remove excerpts on the homepage
 #theme: jekyll-theme-cayman
 remote_theme: poole/hyde
+
+theme: jekyll-theme-cayman
