Set theme jekyll-theme-leap-day

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,4 +14,4 @@ show_excerpts: true # set to false to remove excerpts on the homepage
 #theme: jekyll-theme-cayman
 remote_theme: poole/hyde
 
-theme: jekyll-theme-cayman
+theme: jekyll-theme-leap-day
