--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,14 +1,12 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: RetroTxt Documentation
+author: bengarrett
+email: code.by.ben@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  RetroTxt is the WebExtension that turns ANSI, ASCII, NFO text into in-browser HTML.
 
 # social links
-twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
-github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
+twitter_username: bengarrett77 # DO NOT include the @ character, or else the build will fail!
+github_username: bengarrett # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 theme: jekyll-theme-leap-day
