Moved wiki to /docs.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   RetroTxt is the WebExtension that turns ANSI, ASCII, NFO text into in-browser HTML.
 
 # social links
-twitter_username: bengarrett77 # DO NOT include the @ character, or else the build will fail!
+twitter_username: bens_zone # DO NOT include the @ character, or else the build will fail!
 github_username: bengarrett # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
