Set theme jekyll-theme-modernist

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,4 +9,4 @@ twitter_username: bens_zone # DO NOT include the @ character, or else the build 
 github_username: bengarrett # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-modernist
