--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -3,15 +3,18 @@ version: "3"
 # https://taskfile.dev/#/installation
 #
 # `task` is a Go terminal application that runs in the RetroTxt root directory
-
+#
 # Rules
 # manifest.json is always a copy of manifest_chrome except when running Firefox specific tasks
 # some tasks require the use of yarn https://yarnpkg.com/en/docs/install
+#
+# Tasks do not run on PowerShell, Windows users should use WSL.
+#
 
 vars:
   # The published version number of RetroTxt used in the manifest.json and GitHub commit
   # Must use the numeric format 4.0.0
-  VERSION: "4.1.0"
+  VERSION: "4.2.0"
 
 tasks:
   # internal commands
