--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,13 +1,5 @@
 {
-  "author": "Ben Garrett",
-  "background": {
-    "scripts": [
-      "scripts/functions.js",
-      "scripts/eventpage.js"
-    ],
-    "persistent": false
-  },
-  "browser_action": {
+  "action": {
     "default_title": "RetroTxt",
     "default_icon": {
       "16": "assets/retrotxt_16.png",
@@ -17,6 +9,11 @@
       "48": "assets/retrotxt_48.png",
       "128": "assets/retrotxt_128.png"
     }
+  },
+  "author": "Ben Garrett",
+  "background": {
+    "scripts": ["scripts/functions.js", "scripts/eventpage.js"],
+    "persistent": false
   },
   "commands": {
     "_execute_browser_action": {
@@ -29,25 +26,8 @@
   "default_locale": "en_US",
   "description": "Turn pieces of ANSI based text art and ASCII, NFO plain text into HTML.",
   "homepage_url": "https://retrotxt.com",
-  "icons": {
-    "16": "assets/retrotxt_16.png",
-    "19": "assets/retrotxt_19.png",
-    "32": "assets/retrotxt_32.png",
-    "38": "assets/retrotxt_38.png",
-    "48": "assets/retrotxt_48.png",
-    "128": "assets/retrotxt_128.png"
-  },
-  "incognito": "split",
-  "manifest_version": 2,
-  "minimum_chrome_version": "72",
-  "name": "RetroTxt",
-  "omnibox": {
-    "keyword": "rt"
-  },
-  "optional_permissions": [
-    "downloads",
-    "downloads.open",
-    "tabs",
+  "host_permissions": [
+    "*://*.retrotxt.com/*",
     "file:///*/",
     "*://*/*",
     "*://*.16colo.rs/*",
@@ -57,23 +37,33 @@
     "*://*.textfiles.com/*",
     "*://*.uncreativelabs.net/*"
   ],
+  "icons": {
+    "16": "assets/retrotxt_16.png",
+    "19": "assets/retrotxt_19.png",
+    "32": "assets/retrotxt_32.png",
+    "38": "assets/retrotxt_38.png",
+    "48": "assets/retrotxt_48.png",
+    "128": "assets/retrotxt_128.png"
+  },
+  "incognito": "split",
+  "manifest_version": 3,
+  "minimum_chrome_version": "88",
+  "name": "RetroTxt",
+  "omnibox": {
+    "keyword": "rt"
+  },
+  "optional_permissions": ["downloads", "downloads.open", "tabs"],
   "options_ui": {
     "page": "html/options.html",
-    "chrome_style": false,
     "open_in_tab": true
   },
-  "permissions": [
-    "activeTab",
-    "contextMenus",
-    "storage",
-    "*://*.retrotxt.com/*"
-  ],
+  "permissions": ["activeTab", "contextMenus", "storage"],
   "short_name": "RetroTxt",
   "version": "5.0.0",
   "web_accessible_resources": [
-    "css/*.css",
-    "fonts/*.woff2",
-    "html/options.html",
-    "test/tests_browser.js"
+    { "resources": ["css/*.css"], "matches": ["*"] },
+    { "resources": ["fonts/*.woff2"], "matches": ["*"] },
+    { "resources": ["html/options.html"], "matches": ["*"] },
+    { "resources": ["test/tests_browser.js"], "matches": ["*"] }
   ]
 }
