--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
   "env": {
     "browser": true,
     "es2020": true,
+    "serviceworker": true,
     "webextensions": true
   },
   "ignorePatterns": ["**/*.html", ".github"],
@@ -18,20 +19,20 @@
     "Characters": "readonly",
     "CheckArguments": "readonly",
     "CheckRange": "readonly",
-    "Configuration": "readonly",
+    //"Configuration": "readonly",
     "Contrast": "readonly",
     "CreateLink": "readonly",
     "DisplayAlert": "readonly",
     "DisplayEncodingAlert": "readonly",
     "FindControlSequences": "readonly",
-    "WebBrowser": "readonly",
-    "BrowserOS": "readonly",
+    //"WebBrowser": "readonly",
+    //"BrowserOS": "readonly",
     "FontFamily": "readonly",
     "Guess": "readonly",
     "HardwarePalette": "readonly",
     "HumaniseCamelCase": "readonly",
     "HumaniseFS": "readonly",
-    "OptionsReset": "readonly",
+    //"OptionsReset": "readonly",
     "ParseToChildren": "readonly",
     "RemoveTextPairs": "readonly",
     "StringToBool": "readonly",
