Browser tabs render ANSI. Though all the settings are broken.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,13 +17,13 @@
     "BrowserEncodings": "readonly",
     "BusySpinner": "readonly",
     "Characters": "readonly",
-    "CheckArguments": "readonly",
-    "CheckRange": "readonly",
+    //"CheckArguments": "readonly",
+    //"CheckRange": "readonly",
     //"Configuration": "readonly",
     "Contrast": "readonly",
     "CreateLink": "readonly",
-    "DisplayAlert": "readonly",
-    "DisplayEncodingAlert": "readonly",
+    //"DisplayAlert": "readonly",
+    //"DisplayEncodingAlert": "readonly",
     "FindControlSequences": "readonly",
     //"WebBrowser": "readonly",
     //"BrowserOS": "readonly",
@@ -35,7 +35,7 @@
     //"OptionsReset": "readonly",
     "ParseToChildren": "readonly",
     "RemoveTextPairs": "readonly",
-    "StringToBool": "readonly",
+    //"StringToBool": "readonly",
     "ToggleTextEffect": "readonly",
     "ToggleScanlines": "readonly"
   }
