--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -53,7 +53,7 @@
   },
   "incognito": "split",
   "manifest_version": 3,
-  "minimum_chrome_version": "88",
+  "minimum_chrome_version": "92",
   "name": "RetroTxt",
   "omnibox": {
     "keyword": "rt"
@@ -66,7 +66,7 @@
   "permissions": ["activeTab", "contextMenus", "scripting", "storage"],
   "short_name": "RetroTxt",
   "version": "5.0.0",
-  "version_name": "5.0 protype",
+  "version_name": "5.0 MV3 protype",
   "web_accessible_resources": [
     { "resources": ["css/*.css"], "matches": ["<all_urls>"] },
     { "resources": ["fonts/*.woff2"], "matches": ["<all_urls>"] },
