Fixed eslint globals.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,9 +14,9 @@
   },
   "globals": {
     "BrowserEncoding": "readonly",
-    "BrowserEncodings": "readonly",
+    //"BrowserEncodings": "readonly",
     //"BusySpinner": "readonly",
-    "Characters": "readonly",
+    //"Characters": "readonly",
     //"CheckArguments": "readonly",
     //"CheckRange": "readonly",
     //"Configuration": "readonly",
@@ -27,9 +27,9 @@
     "FindControlSequences": "readonly",
     //"WebBrowser": "readonly",
     //"BrowserOS": "readonly",
-    "FontFamily": "readonly",
-    "Guess": "readonly",
-    "HardwarePalette": "readonly",
+    //"FontFamily": "readonly",
+    //"Guess": "readonly",
+    //"HardwarePalette": "readonly",
     "HumaniseCamelCase": "readonly",
     "HumaniseFS": "readonly",
     //"OptionsReset": "readonly",
