--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -18,7 +18,7 @@
     {
       "matches": ["<all_urls>"],
       "all_frames": true,
-      "js": ["scripts/sw/helpers.js", "scripts/mv3_content-script.js"]
+      "js": ["scripts/sw/helpers.js"]
     }
   ],
   "commands": {
