updated quick settings.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,11 @@
     "editor.formatOnSave": false,
     "editor.unicodeHighlight.ambiguousCharacters": false,
     "editor.wordWrap": "on",
-    "editor.quickSuggestions": false
+    "editor.quickSuggestions": {
+      "comments": "off",
+      "strings": "off",
+      "other": "off"
+    }
   },
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
