--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,8 @@
 
 # Custom for Visual Studio.
 *.cs     diff=csharp
+
+# Yarn tip
+# https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
+/.yarn/releases/** binary
+/.yarn/plugins/** binary
