--- a/package.json
+++ b/package.json
@@ -1,52 +1,28 @@
 {
   "name": "retrotxt",
   "version": "5.0.0",
-  "description": "Turn many pieces of ANSI text art and ASCII, NFO, Shift-JIS, plain text into HTML5.",
-  "keywords": [
-    "ascii",
-    "ansi",
-    "art",
-    "cli",
-    "html",
-    "nfo",
-    "pcboard",
-    "shift-jis",
-    "text",
-    "wildcat"
-  ],
-  "homepage": "https://retrotxt.com",
-  "bugs": {
-    "url": "https://github.com/bengarrett/RetroTxt/issues"
-  },
+  "private": true,
   "license": "LGPL-3.0",
-  "author": "Ben Garrett",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/bengarrett/RetroTxt"
-  },
   "os": [
     "darwin",
     "linux",
     "win32"
   ],
-  "prettier": {
-    "semi": false
-  },
-  "devDependencies": {
-    "ajv": "8.8.1",
-    "dot-json": "*",
-    "eslint": "8.2.0",
-    "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-prettier": "4.x",
-    "prettier": "2.x",
-    "wawoff2": "2.0.0",
-    "web-ext": "*"
-  },
   "scripts": {
     "font": "woff2_compress.js"
   },
+  "packageManager": "yarn@3.2.2",
+  "devDependencies": {
+    "ajv": "^8.11.0",
+    "dot-json": "^1.2.2",
+    "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.7.1",
+    "wawoff2": "^2.0.1"
+  },
   "dependencies": {
-    "bulma": "0.x",
-    "qunit": "2.x"
+    "bulma": "^0.9.4",
+    "qunit": "^2.19.1"
   }
 }
